# formulaic-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: motivator.json  quick_test.py  quickstart.py
src/formulaic/: __init__.py  example.py  formulaic.py  openclient.py
src/formulaic_ai/: __init__.py  formulaic_ai.py  openclient.py
src:formulaic/: example.py  formulaic.py
