[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formulaic"
version = "0.1.0.1"
description = "The official Formulaic python library for working with generative AI prompts."
authors = [
    {name = "Javaun Moradi", email = "formulaic@mozilla.com"}
    ]
license = "Apache-2.0"
readme = "README.md"
keywords = ["prompt engineering", "prompt scripts" , "LLM", "language models", "generative ai", "openai", "api", ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0"
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https:formulaic.app"
repository = "https://github.com/Mozilla-Ocho/formulaic-python"
documentation = "https://github.com/Mozilla-Ocho/formulaic-python"

[tool.hatch.build.targets.wheel]
packages = ["src/formulaic"]





